--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,46 +1,73 @@
-.footer{
-    background:  rgb(0, 36, 71);
-    padding-left: 10%;
-    padding-right: 10%;
-    padding-top: 5%;
-    padding-bottom: 2%;
+.footer {
+    background: #002447;
+    padding: 60px 10%;
+    color: #fff;
+    position: relative;
 }
-.footer .social-icons{
-    display: block;
+
+.footer .social-icons {
     text-align: center;
+    margin-bottom: 30px;
 }
-.social-icons i{
-    padding: 15px;
-    font-size: 45px;
-    color: white;
+
+.social-icons a {
+    text-decoration: none;
+    margin: 0 10px;
+}
+
+.social-icons i {
+    font-size: 40px;
+    color: #fff;
     transition: 0.3s;
 }
-.social-icons i:hover{
-   color: #FDC632;
+
+.social-icons i:hover {
+    color: #fdc632;
 }
-.footer ul{
+
+.footer .navbar-links ul {
     text-align: center;
+    padding: 0;
+    margin-bottom: 30px;
 }
-.footer ul li{
-    list-style: none;
+
+.footer .navbar-links ul li {
     display: inline-block;
-    padding: 8px;
+    margin: 0 15px;
     font-size: 16px;
-    color: #fff;
+    list-style: none;
+    cursor: pointer;
+    transition: color 0.3s ease;
 }
-.footer hr{
-    margin-bottom: 15px;
+
+.footer .navbar-links ul li:hover {
+    color: #fdc632;
 }
-.copyright{
+
+.footer hr {
+    border: 0.5px solid rgba(255,255,255,0.3);
+    margin-bottom: 20px;
+}
+
+.copyright {
     text-align: center;
-    color: #fff;
+    font-size: 14px;
+    color: rgba(255, 255, 255, 0.8);
 }
+
+/* Responsive */
 @media screen and (max-width: 800px) {
-    .footer{
-        padding-left: 5%;
-        padding-right: 5%;
-    } 
-    .social-icons i{
+    .footer {
+        padding: 40px 5%;
+    }
+
+    .social-icons i {
         font-size: 30px;
+        margin: 0 8px;
+    }
+
+    .footer .navbar-links ul li {
+        margin: 0 8px;
+        font-size: 14px;
     }
 }
