--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,70 +1,70 @@
-nav{
+nav {
     width: 100%;
     display: flex;
-    /*background: yellow; */
     align-items: center;
     justify-content: space-between;
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 1;
+    z-index: 999; /* higher so links are clickable */
     padding: 5px 12px;
-    
+    transition: 0.5s ease-in-out;
 }
-.navbar-shifted{
+
+.styled-bg {
+    background: #FDC632; /* your yellow */
+}
+
+.navbar-shifted {
     top: 45px;
     transition: 0.5s ease-in-out;
 }
 
-nav ul li{
+nav ul li {
     list-style: none;
     display: inline-block;
     padding: 0 8px;
     font-size: 16px;
     color: #fff;
     cursor: pointer;
-   
-}
-.styled-bg{
-    background: #FDC632;
-}
-.menu-bar{
-    display: none;
-  
 }
 
+.menu-bar {
+    display: none;
+    cursor: pointer;
+}
+
+/* Mobile menu */
 @media screen and (max-width: 840px) {
-  
-    nav{
-        padding: 15px 0;
-        background: #FDC632;
-        transition: 0.5s ease-in-out;
-       }
-    nav ul{
+    nav {
+        padding: 15px 20px;
+    }
+    nav ul {
         position: fixed;
-        left: 0px;
-        top: 72.2px;
-        bottom: 0;
-        background: #FDC632;
-        z-index: -1;
+        left: 0;
+        top: 70px;
         width: 100%;
-        height: 350px;
-        transition: height 3s ease-in-out;
-      }
-        nav ul li{
+        height: 0;
+        background: #FDC632;
+        overflow: hidden;
+        z-index: 999; /* must be above hero */
+        display: flex;
+        flex-direction: column;
+        transition: height 0.3s ease;
+    }
+    nav ul li {
         display: block;
-        padding-top: 20px;
-        padding-left: 80px;
+        padding: 20px 40px;
         font-size: 20px;
-        
-        }    
-        .menu-bar{
-            display: block;
-            width: 30px;
-            cursor: pointer;
-        }
-    .hide-menu{
-     display: none;
+        color: #002447; /* dark links on yellow bg */
+    }
+    nav ul.show-menu {
+        height: 350px; /* expand when toggled */
     }
 
+    .menu-bar {
+        display: block;
+        width: 30px;
+        z-index: 1000;
+    }
 }
